[package]
name = "mylaps-nyta"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.37", features = ["derive"] }
anyhow = "1.0.98"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
ctrlc = "3.4.6"
reqwest = "0.12.15"
#time = "0.3.41"
